--- a/webroot/img/_masthead.scss
+++ b/webroot/img/_masthead.scss
@@ -128,22 +128,8 @@
     }
 
     .masthead__option {
-        margin-inline-end: 246px;
-        margin-block-start: 8px;
-        background-color: black;
+        margin-inline-start: 1100px;
     }
-
-
-    .deu {
-        color: #ffbf48;
-    }
-
-    // .header__navigation {
-    //     background-image: url('../img/xbox\ icon.png'), url('../webroot/img/steam\ icon.png');
-    //     background-size: 30px;
-    //     background-repeat: no-repeat, no-repeat;
-    //     background-position: top right, top right;
-    // }
 }
 
 
